# glyph_cartographer

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml
checkpoints/avid-eon-82-sf-b5-250628-210432/: base_b5_512.py  validation_files_used_for_this_run.json
configs/: base_b5_512.py
data/: good_negatives.json
data/kml_files/: geoglyphs_legacy.kml
scripts/: train.py
scripts/dataset/: check_masks.py  create_dataset.py  inspect_patches.py
scripts/utils/: create_session.py
